--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 50px;
+    box-sizing: border-box;
 }
 
 .logoContainer {
@@ -64,7 +65,7 @@ form {
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .activeUnderline {
@@ -95,6 +96,12 @@ form {
     
 }
 
+#allPatients {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #createUser {
     display: flex;
     flex-direction: column;
@@ -108,7 +115,5 @@ form {
 }
 
 @media only screen and (max-width: 600px) {
-    form {
-        width: 100%;
-    }
+    
   }
