closeButton function, hover

--- a/style.css
+++ b/style.css
@@ -125,6 +125,14 @@ form {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+#closeLink {
+    cursor : pointer;
+    color : brown;
+}
+#closeLink:hover {
+    color : red;
+}
+
 @media only screen and (max-width: 600px) {
 
     .buttonsWidth {
